fix: fix align of title on Register and Login pages as specified in the layout

--- a/src/components/user/Auth/Auth.css
+++ b/src/components/user/Auth/Auth.css
@@ -77,6 +77,7 @@
 @media (min-width: 768px) {
   .auth__title {
     margin-bottom: 40px;
+    align-self: flex-start;
   }
 }
 
